# blender-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_SETUP_JP.md  Dockerfile  NOTICE  README.md  SECURITY.md  addon.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: claude_desktop_config.json  cursor_config.json
src/blender_mcp/: server.py
tests/: __init__.py  test_server.py
