[project]
name = "blender-mcp"
version = "0.2.0"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Yuki Tsuroka", email = "yukitsuroka@users.noreply.github.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0,<2.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/mackatwentytsuru/blender-mcp"
"Bug Tracker" = "https://github.com/mackatwentytsuru/blender-mcp/issues"
"Documentation" = "https://github.com/mackatwentytsuru/blender-mcp/wiki"
"Changelog" = "https://github.com/mackatwentytsuru/blender-mcp/blob/main/CHANGELOG.md"
